--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,14 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
       - name: Pull latest changes from remote
         run: |
           git config --global user.name "Toulik-Das"
           git config --global user.email "dastoulik12@gmail.com"
-          git pull --no-rebase https://Toulik:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Toulik/Meeting-Minutes main || true
+          git pull --no-rebase https://Toulik:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Toulik/Meeting-Minutes main
 
       - name: Push changes to Hugging Face
         run: |
           git add .
-          git commit -m "Your commit message" || echo "No changes to commit"
+          git commit -m "Your commit message"
           git push https://Toulik:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Toulik/Meeting-Minutes main
